# Winza

./: README.md
frontend/: App.tsx  README.md  index.html  package-lock.json  package.json  pb_schema.json  pb_schema_lottery_rounds.json  pb_schema_lottery_winners.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  utputFormat  vite.config.ts
frontend/@linera/client/: package.json
frontend/@linera/metamask/: package.json
frontend/@linera/signer/: package.json
frontend/components/: AIAssistant.tsx  ChartTabs.tsx  Footer.tsx  GameCard.tsx  Header.tsx  Leaderboard.tsx  LightningAnimation.tsx  LineraProvider.tsx  LotteryCard.tsx  LotteryHero.tsx  LotteryHistory.tsx  LotteryHowToPlay.tsx  LotteryPoolsInfo.tsx  LotterySection.tsx  LotteryWinnerCard.tsx  MobileBottomSheet.tsx  MobileFeedback.tsx  MobileInstallPrompt.tsx  MobileLoadingSpinner.tsx  MobileNavigation.tsx  MobileOrientationHandler.tsx  MobileQuickActions.tsx  MobileSplashScreen.tsx  ThemeProvider.tsx
frontend/components/ui/: button.tsx  calendar.tsx  input-otp.tsx
frontend/db/: rounds.sql
frontend/deploy/: nginx-site-template.conf  setup_production.sh
frontend/hooks/: useWinnerReveal.ts
frontend/orchestrator/: bot-buy-tickets2.js  config.js  leaderboard-pb-sync.js  lottery-orchestrator.js  lottery-supabase-sync.js  lottery_schema.sql  orchestrator.js  package-lock.json  package.json  pb-rounds-test.js  rounds-init.js  supabase-sync.js
frontend/public/: manifest.json  sw.js
frontend/scripts/: check-old-chain.ps1  pb-setup-rounds.ps1
frontend/src/: vite-env.d.ts
frontend/styles/: globals.css  mobile.css
frontend/utils/: WebSocketClient.ts  mobileUtils.ts  pwaUtils.ts  timeUtils.ts  useMobile.ts
smartcontract/: README.md  app_ids.txt  apps.md  deploy.sh
smartcontract/leaderboard/: Cargo.toml
smartcontract/leaderboard/src/: contract.rs  lib.rs  service.rs  state.rs
smartcontract/loterry/: Cargo.toml
smartcontract/loterry/src/: contract.rs  lib.rs  service.rs  state.rs
smartcontract/lottery-abi/: Cargo.toml
smartcontract/lottery-app/: Cargo.toml
smartcontract/lottery-rounds/: Cargo.toml
smartcontract/lottery-rounds/src/: contract.rs  lib.rs  service.rs  state.rs
smartcontract/microbetreal/: Cargo.toml
smartcontract/native/: Cargo.toml
smartcontract/native-fungible-abi/: Cargo.toml
smartcontract/native/src/: contract.rs  lib.rs  service.rs  state.rs
smartcontract/rounds/: Cargo.toml
(+19 files in other folders)
